# CouponRemindersApp

./: .gitignore  README.md
backend/: README.md  package-lock.json  pyproject.toml  serverless.yml
backend/coupon_reminders/: coupon_processor.py  main.py
backend/coupon_reminders/controllers/: app.py
backend/coupon_reminders/models/: add_coupon.py  get_coupons.py  image_to_text_response.py
backend/coupon_reminders/services/: coupon.py  ocr.py  processed_coupon.py  raw_coupon.py  store_and_retrieve.py
backend/tests/fixtures/: image_bytes
coupon_reminders/: __init__.py  main.py
coupon_reminders/models/: image_to_text_request.py
coupon_reminders/services/: ocr.py
frontend/: .gitignore  App.tsx  app.json  package.json
tests/: test_ocr.py
