[tool.poetry]
name = "coupon-reminders"
version = "0.1.0"
description = ""
authors = ["daviddecoding <daviddecoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytesseract = "0.3.8"
fastapi = "0.73.0"
uvicorn = "0.17.0"
mangum = "0.12.3"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
